monkey-c-formatter/tests/snapshots/snapshots__format_inputs@multi_binding_decls.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/multi_binding_decls.mc
---
var a, b, c;

const a, b, c = 1;

var a, b, c = 1 as Number;

var thisIsReallyLongSoEventuallyThisWouldWrap,
    thisOneIsAlsoVeryLongSoAtTheEndWeWouldWrap,
    andEvenTheThirdOneIsLong = 1 as Number;

var a = 1, b = 2;

var a = 1 as Number, b = 2 as Number;

class Foo {
    var x, y;
    const A = 1, B = 2;

    function f() {
        var i, j, k = 0;
        for (i = 0; i < 10; i += 1) {
            doX();
        }
    }
}

var firstLongBindingName = "some value",
    secondLongBindingName = "another value",
    thirdLongBindingName = 3;

private var firstLongBindingName = "some value",
    secondLongBindingName = "another value",
    thirdLongBindingName = 3;

protected static var firstLongBindingName = "some value",
    secondLongBindingName = "another value",
    thirdLongBindingName = 3;
