monkey-c-formatter/tests/snapshots/snapshots__format_inputs@multiline_block_comment_at_top_level.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/multiline_block_comment_at_top_level.mc
---
/* header
   text */
function f() {}
