monkey-c-formatter/tests/snapshots/snapshots__format_inputs@multiline_block_comment_close_as_written.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/multiline_block_comment_close_as_written.mc
---
/*****************
 * Banner
 *****************/

/* disabled
foo();
//*/

class A {
    function f() {
        /* line 1
           line 2 */
        var x = 1;
    }
}
