monkey-c-formatter/tests/snapshots/snapshots__format_inputs@multiline_block_comment_nested.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/multiline_block_comment_nested.mc
---
function f() {
    if (x) {
        /* a
           b */
        var y = 1;
    }
}
