monkey-c-formatter/tests/snapshots/snapshots__format_inputs@multiline_block_comment_reindented.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/multiline_block_comment_reindented.mc
---
function f() {
    /**
     * Doc
     */
    if (x) {
        /* disabled
        foo();

            bar();
        */
        /*
        bar
        */
        /* foo
                  bar
        baz */
        y = 1; /* trailing
                  comment */
    }
}
