monkey-c-formatter/tests/snapshots/snapshots__format_inputs@string_escape_sequences.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/string_escape_sequences.mc
---
function f() {
    var singleQuote = "it\'s";
    var doubleQuote = "say \"hi\"";
    var backslash = "a\\b";
    var newline = "a\nb";
    var carriageReturn = "a\rb";
    var tab = "a\tb";
    var backspace = "a\bb";
    var formFeed = "a\fb";
    var verticalTab = "a\vb";
    var nullEscape = "a\0b";
    var hexEscape = "\x41\x7A";
    var unicodeEscape = "\u0041\u00e9";
    var unknownEscape = "\q\z";
}
