monkey-c-formatter/tests/snapshots/snapshots__format_inputs@string_escapes.mc.snap
---
source: tests/snapshots.rs
input_file: tests/snapshot_inputs/string_escapes.mc
---
function f() {
    var a = "embedded \"quote\" inside";
    var b = "newline\nhere";
    var c = "tab\there";
    var d = "back\\slash";
    var e = "degree °, emoji 😀, accented é";
    s.find("\"");
}
