monkey-c-formatter/tests/snapshots/snapshots__format_inputs@switch_case_trailing_comments.mc.snap
---
source: tests/snapshots.rs
input_file: tests/snapshot_inputs/switch_case_trailing_comments.mc
---
function fn() {
    switch (x) {
        case 1: /* block tag */
            do_thing();
        case 2: // line tag
            do_thing();
        default: /* tag */
            fallback();
    }
}
